# Crazyflie-RoboticsProjects

./: .gitignore  README.md
docker/: Dockerfile  remove.sh  run.sh  stop.sh
ros2_ws/src/crazyflie_rp_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/crazyflie_rp_pkg/config/: nav2_params.yaml  slam_toolbox_params.yaml
ros2_ws/src/crazyflie_rp_pkg/launch/: sim_cf2_single.launch.py  sim_cf2_with_nav.launch.py  sim_cf2_with_slam.launch.py
ros2_ws/src/mav_comm/mav_comm/: CMakeLists.txt  package.xml
ros2_ws/src/mav_comm/mav_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/mav_comm/mav_planning_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/mav_comm/mav_planning_msgs/msg/: PolynomialSegment.msg  PolynomialSegment4D.msg
ros2_ws/src/mav_comm/mav_state_machine_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/mav_comm/mav_system_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/sim_cf2/: package.xml
ros2_ws/src/sim_cf2/launch/: main.launch.xml  start_gazebo_world.launch.py
scripts/: crazyflie_utils.py  position_control.py  takeoff_land.py
tools/: build.sh  run_hardware.sh  run_sim.sh  run_sim_cf2.sh  source.sh
